# msmarco-learning-to-rank

./: .gitignore  README.md  pyproject.toml
docker/: docker-compose.yml
docker-multi-node/: docker-compose.yml
notebooks/: 2022-07-21 Training models on MSMARCO sample.ipynb
src/: build_dataset_from_features.py  build_index.py  build_index.sh  config.py  extract_similarity_features.py  termvectors_queries.py  utils.py
