[tool.poetry]
name = "bachelor-thesis-ufrj-2022"
version = "0.1.0"
description = ""
authors = ["Althayr Nazaret <althabrandao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
elasticsearch = "7.17.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
